// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GaterMetadata transformer a simple root component has empty input and output 1`] = `
Metadata {
  "components": Array [
    Object {
      "classname": "FeatDisplayRootComponent",
      "fileName": "/__test__/__fixtures__/gather-metadata/root-component.tsx",
      "finalTagName": "feat-display",
      "group": "feat",
      "initialTagName": "feat-display",
      "isRoot": true,
    },
  ],
  "prefix": null,
  "registerComponent": [Function],
  "suffix": null,
}
`;

exports[`GaterMetadata transformer a simple root component has input and output matching props 1`] = `
Metadata {
  "components": Array [
    Object {
      "classname": "FeatDisplayRootComponent",
      "fileName": "/__test__/__fixtures__/gather-metadata/root-component-with-api.tsx",
      "finalTagName": "complex-feature-display",
      "group": "complex-feature",
      "initialTagName": "complex-feature-display",
      "isRoot": true,
    },
  ],
  "prefix": null,
  "registerComponent": [Function],
  "suffix": null,
}
`;
